# dspec

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: cheatsheet.typ
dspec/: __init__.py  browser.py  cli.py  describe.py  sync.py  types.py  validator.py
examples/: invoice_reconciler.spec.yml  user_auth.spec.yml
schemas/: spec.schema.json
ui/: crc.html
