[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dspec"
version = "0.1.0"
description = "Distributed Object Specification System — write specs, not code"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["dspec*"]

[project.scripts]
dspec = "dspec.cli:main"
